# cpplinq

./: .gitmodules  CMakeLists.txt  README.md
examples/: cpplinq_contract.hpp  nodeos_contract_structures.hpp  wasmql_contract.hpp
include/cpplinq/: cpplinq.hpp  sql_context.hpp
include/cpplinq/detail/: call_context.hpp  column.hpp  cpplinq_exception.hpp  cursor.hpp  delete_context.hpp  insert_context.hpp  procedure_registry.hpp  range_info.hpp  regex.hpp  select_context.hpp  string.hpp  table.hpp  table_registry.hpp  unsupported.hpp  update_context.hpp
include/cpplinq/detail/aggregates/: aggregate.hpp
include/cpplinq/detail/information_schema/: schema.hpp  table_index.hpp
include/cpplinq/detail/operators/: and.hpp  between.hpp  comparison_operator.hpp  equal_to.hpp  evaluate.hpp  expression_tree.hpp  greater_than.hpp  greater_than_equal.hpp  group.hpp  ilike.hpp  in.hpp  is.hpp  less_than.hpp  less_than_equal.hpp  like.hpp  logical_operator.hpp  make.hpp  not.hpp  not_equal.hpp  operator_base.hpp  operators.hpp  or.hpp
include/cpplinq/detail/traits/: any_index.hpp  any_procedure.hpp  any_table.hpp  column_trait.hpp  hash.hpp  index_trait.hpp  procedure_trait.hpp  table_trait.hpp  underlying_column_type.hpp
include/cpplinq/details/: call_context.hpp  column.hpp  cpplinq_exception.hpp  cursor.hpp  delete_context.hpp  insert_context.hpp  procedure_registry.hpp  regex.hpp  select_context.hpp  string.hpp  table.hpp  table_registry.hpp  unsupported.hpp  update_context.hpp
include/cpplinq/details/information_schema/: schema.hpp  table_index.hpp
include/cpplinq/details/operators/: and.hpp  between.hpp  comparison_operator.hpp  equal_to.hpp  evaluate.hpp  expression_tree.hpp  greater_than.hpp  greater_than_equal.hpp  group.hpp  ilike.hpp  in.hpp  is.hpp  less_than.hpp  less_than_equal.hpp  like.hpp  logical_operator.hpp  make.hpp  (+5 more)
src/: aggregate.cpp  any_index.cpp  any_table.cpp  call_context.cpp  delete_context.cpp  group.cpp  hash.cpp  insert_context.cpp  operators_make.cpp  procedure_registry.cpp  range_info.cpp  regex.cpp  schema.cpp  select_context.cpp  sql_context.cpp  string.cpp  table_registry.cpp  unsupported.cpp  update_context.cpp
tests/: CMakeLists.txt  cppling_example.cpp  select_context_tests.cpp  tests.cpp
(+10 files in other folders)
